--- a/src/main/resources/view/LoginPage.fxml
+++ b/src/main/resources/view/LoginPage.fxml
@@ -3,36 +3,42 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1200.0" style="-fx-background-color: #EBD3F8;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.LoginPageController">
+<AnchorPane fx:id="loginPage" prefHeight="750.0" prefWidth="1200.0" style="-fx-background-color: #2C3E50;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.LoginPageController">
    <children>
-      <AnchorPane layoutX="613.0" layoutY="106.0" prefHeight="532.0" prefWidth="462.0" style="-fx-background-color: white; -fx-background-radius: 25;">
+      <!-- Left Side: Login Form -->
+      <AnchorPane layoutX="100.0" layoutY="106.0" prefHeight="532.0" prefWidth="450.0" style="-fx-background-color: white; -fx-background-radius: 25;">
          <children>
-            <Label layoutX="177.0" layoutY="43.0" text="Sign In">
+            <Label layoutX="134.0" layoutY="44.0" text="Welcome again!">
                <font>
-                  <Font name="System Bold" size="36.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <TextField fx:id="txtUsername" layoutX="65.0" layoutY="148.0" prefHeight="40.0" prefWidth="332.0" />
-            <TextField fx:id="txtPassword" layoutX="65.0" layoutY="214.0" prefHeight="40.0" prefWidth="332.0" />
-            <Button fx:id="btnSignIn" layoutX="65.0" layoutY="367.0" mnemonicParsing="false" onAction="#btnSignInOnAction" prefHeight="40.0" prefWidth="332.0" text="Sign In">
+            <Label layoutX="65.0" layoutY="100.0" text="Enter your username" />
+            <TextField fx:id="txtUsername" layoutX="65.0" layoutY="120.0" prefHeight="40.0" prefWidth="320.0" />
+
+            <Label layoutX="65.0" layoutY="180.0" text="Enter your password" />
+            <TextField fx:id="txtPassword" layoutX="65.0" layoutY="200.0" prefHeight="40.0" prefWidth="320.0" />
+
+            <Button fx:id="btnSignIn" layoutX="65.0" layoutY="323.0" mnemonicParsing="false" onAction="#btnSignInOnAction" prefHeight="40.0" prefWidth="320.0" style="-fx-background-color: #3366FF; -fx-text-fill: white;" text="Sign In">
                <font>
-                  <Font size="20.0" />
+                  <Font size="18.0" />
                </font>
             </Button>
-            <Label fx:id="lblNotAcc" layoutX="65.0" layoutY="284.0" text="Don't have an account?">
-               <font>
-                  <Font name="Comic Sans MS" size="16.0" />
-               </font>
-            </Label>
-            <Label fx:id="lblCreateAcc" layoutX="238.0" layoutY="282.0" onMouseClicked="#lblCreateAccOnClick" prefHeight="26.0" prefWidth="174.0" text="Create a new Account" textFill="#2980b9">
-               <font>
-                  <Font name="Comic Sans MS Bold" size="16.0" />
-               </font>
-            </Label>
+
+            <Label fx:id="lblForgotPassword" layoutX="164.0" layoutY="273.0" text="Forgot your password?" textFill="#2980b9" />
+            <Label layoutX="98.0" layoutY="392.0" text="Don't have an account ? " />
+            <Label fx:id="lblCreateAcc" layoutX="240.0" layoutY="392.0" onMouseClicked="#lblCreateAccOnClick" text="Create new account" textFill="#2980b9" />
          </children>
       </AnchorPane>
+      <ImageView fitHeight="506.0" fitWidth="464.0" layoutX="631.0" layoutY="140.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/login-page.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
