--- a/src/main/resources/view/Therapist-Table-View.fxml
+++ b/src/main/resources/view/Therapist-Table-View.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="259.0" prefWidth="522.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.TherapistTableFormController">
+<AnchorPane prefHeight="398.0" prefWidth="518.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.TherapistTableFormController">
 
-    <TableView fx:id="tblTherapist" onMouseClicked="#tblTherapistOnClick" prefHeight="259.0" prefWidth="522.0">
+    <TableView fx:id="tblTherapist" layoutX="4.0" layoutY="4.0" onMouseClicked="#tblTherapistOnClick" prefHeight="390.0" prefWidth="511.0">
         <columns>
             <TableColumn fx:id="clmTherapistId" prefWidth="103.19994962215424" text="Therapist ID" />
             <TableColumn fx:id="clmTherapistName" prefWidth="132.00000762939453" text="Therapist Name" />
