--- a/src/main/resources/view/Manage-Therapy-Session-Form.fxml
+++ b/src/main/resources/view/Manage-Therapy-Session-Form.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="632.0" prefWidth="963.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ManageTherapySessionController">
+<AnchorPane fx:id="sessionPane" prefHeight="632.0" prefWidth="963.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ManageTherapySessionController">
     <children>
 
         <!-- Header -->
@@ -40,7 +40,6 @@
                 <Font name="Ubuntu" size="27.0" />
             </font>
         </Label>
-        <JFXButton fx:id="btnAddNewTherapist" layoutX="739.0" layoutY="45.0" onAction="#btnAddNew_OnAction" prefHeight="35.0" prefWidth="174.0" style="-fx-cursor: hand; -fx-background-color: #007bff;" text="+ New Therapy Programs" textFill="WHITE" />
 
         <!-- Session Details -->
         <Label layoutX="35.0" layoutY="141.0" text="Session ID:" />
@@ -68,6 +67,9 @@
 
         <!-- Side Content Panel -->
         <AnchorPane fx:id="mainPane" layoutX="426.0" layoutY="136.0" prefHeight="399.0" prefWidth="518.0" style="-fx-background-color: #FFFFFF;" />
+      <TextField fx:id="txtSearch" layoutX="696.0" layoutY="49.0" onKeyReleased="#searchPatient" prefHeight="26.0" prefWidth="191.0" promptText="Search by Name" />
+      <JFXButton id="btnAddTherapist" fx:id="btnReschedule" layoutX="663.0" layoutY="90.0" onAction="#btnRescheduleOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #007bff; -fx-text-fill: white;" text="Reschedule" />
+      <JFXButton id="btnAddTherapist" fx:id="btnCancel" layoutX="812.0" layoutY="90.0" onAction="#btnCancelOnAction" prefHeight="26.0" prefWidth="110.0" style="-fx-background-color: #007bff; -fx-text-fill: white;" text="Cancel" />
 
     </children>
 </AnchorPane>
