--- a/src/main/resources/view/TherapySession-Table-View.fxml
+++ b/src/main/resources/view/TherapySession-Table-View.fxml
@@ -13,23 +13,22 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="600.0" prefWidth="659.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.TherapySessionTableFormController">
+<AnchorPane prefHeight="632.0" prefWidth="963.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.TherapySessionTableFormController">
    <children>
-      <TableView fx:id="tblTherapySession" layoutX="40.0" layoutY="121.0" prefHeight="410.0" prefWidth="573.0">
+      <TableView fx:id="tblTherapySession" layoutX="78.0" layoutY="157.0" prefHeight="374.0" prefWidth="806.0">
          <columns>
-            <TableColumn fx:id="clmSessionId" prefWidth="64.0" text="Session ID" />
-            <TableColumn fx:id="clmDate" prefWidth="76.0" text="Date" />
-            <TableColumn fx:id="clmTime" prefWidth="73.60003662109375" text="Time" />
-            <TableColumn fx:id="clmStatus" prefWidth="88.79998779296875" text="Status" />
-            <TableColumn fx:id="clmPatientId" prefWidth="70.4000244140625" text="Patient ID" />
-            <TableColumn fx:id="clmProgramId" prefWidth="87.199951171875" text="Program ID" />
-            <TableColumn fx:id="clmTherapistId" prefWidth="109.60003662109375" text="Therapist ID" />
+            <TableColumn fx:id="clmSessionId" prefWidth="102.39999389648438" text="Session ID" />
+            <TableColumn fx:id="clmDate" prefWidth="100.79998779296875" text="Date" />
+            <TableColumn fx:id="clmTime" prefWidth="86.4000244140625" text="Time" />
+            <TableColumn fx:id="clmStatus" prefWidth="127.20001220703125" text="Status" />
+            <TableColumn fx:id="clmPatientId" prefWidth="116.0" text="Patient ID" />
+            <TableColumn fx:id="clmProgramId" prefWidth="141.60003662109375" text="Program ID" />
+            <TableColumn fx:id="clmTherapistId" prefWidth="136.79998779296875" text="Therapist ID" />
          </columns>
       </TableView>
-      <JFXButton id="btnAddTherapist" fx:id="btnReschedule" layoutX="353.0" layoutY="542.0" onAction="#btnRescheduleOnAction" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #007bff; -fx-text-fill: white;" text="Reschedule" />
-      <JFXButton id="btnAddTherapist" fx:id="btnCancel" layoutX="503.0" layoutY="542.0" onAction="#btnCancelOnAction" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #007bff; -fx-text-fill: white;" text="Cancel" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" height="80.0" layoutX="20.0" layoutY="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="620.0">
+      <JFXButton id="btnAddTherapist" fx:id="btnReschedule" layoutX="619.0" layoutY="559.0" onAction="#btnRescheduleOnAction" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #007bff; -fx-text-fill: white;" text="Reschedule" />
+      <JFXButton id="btnAddTherapist" fx:id="btnCancel" layoutX="773.0" layoutY="559.0" onAction="#btnCancelOnAction" prefHeight="35.0" prefWidth="110.0" style="-fx-background-color: #007bff; -fx-text-fill: white;" text="Cancel" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" height="80.0" layoutX="20.0" layoutY="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="922.0">
          <fill>
             <LinearGradient endX="0.048" endY="0.712">
                <stops>
