--- a/src/main/resources/view/AdminDashboard.fxml
+++ b/src/main/resources/view/AdminDashboard.fxml
@@ -2,28 +2,72 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 
 <AnchorPane prefHeight="700.0" prefWidth="1150.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.AdminPageController">
 
    <!-- Sidebar -->
-   <VBox alignment="TOP_CENTER" layoutY="66.4" prefHeight="632.0" prefWidth="186.0" spacing="20.0" style="-fx-background-color: #2C3E50; -fx-padding: 15;" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="66.0">
+   <VBox alignment="TOP_CENTER" layoutY="66.4" prefHeight="632.0" prefWidth="186.0" spacing="20.0" style="-fx-background-color: #5D9CEC; -fx-padding: 20;" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="66.0">
       <ImageView fitHeight="129.0" fitWidth="80" preserveRatio="true">
          <image>
             <Image url="@../images/admin-logo.png" />
          </image>
       </ImageView>
       <Label style="-fx-font-size: 18px; -fx-text-fill: white;" text="Admin Dashboard" />
-      <Button fx:id="btnDashboard" onAction="#btnDashboardOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #34495E; -fx-background-radius: 10;" text="Dashboard" textFill="WHITE" />
-      <Button fx:id="btnPatient" onAction="#btnPatientOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #34495E; -fx-background-radius: 10;" text="Patient" textFill="WHITE" />
-      <Button fx:id="btnTherapist" onAction="#btnTherapistOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #34495E; -fx-background-radius: 10;" text="Therapist" textFill="WHITE" />
-      <Button fx:id="btnAppointment" onAction="#btnAppointmentOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #34495E; -fx-background-radius: 10;" text="Appointment" textFill="WHITE" />
-      <Button fx:id="btnPayment" onAction="#btnPaymentOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #34495E; -fx-background-radius: 10;" text="Payment" textFill="WHITE" />
-      <Button fx:id="btnTherapyProgram" onAction="#btnTherapyProgramOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #34495E; -fx-background-radius: 10;" text="Therapy Program" textFill="WHITE" />
+      <Button fx:id="btnDashboard" onAction="#btnDashboardOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #5D9CEC; -fx-background-radius: 10;" text="Dashboard" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </color>
+            </DropShadow>
+         </effect></Button>
+      <Button fx:id="btnPatient" onAction="#btnPatientOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #5D9CEC; -fx-background-radius: 10;" text="Patient" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </color>
+            </DropShadow>
+         </effect></Button>
+      <Button fx:id="btnTherapist" onAction="#btnTherapistOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #5D9CEC; -fx-background-radius: 10;" text="Therapist" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </color>
+            </DropShadow>
+         </effect></Button>
+      <Button fx:id="btnAppointment" onAction="#btnAppointmentOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #5D9CEC; -fx-background-radius: 10;" text="Appointment" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </color>
+            </DropShadow>
+         </effect></Button>
+      <Button fx:id="btnPayment" onAction="#btnPaymentOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #5D9CEC; -fx-background-radius: 10;" text="Payment" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </color>
+            </DropShadow>
+         </effect></Button>
+      <Button fx:id="btnTherapyProgram" onAction="#btnTherapyProgramOnAction" prefHeight="38.0" prefWidth="138.0" style="-fx-background-color: #5D9CEC; -fx-background-radius: 10;" text="Therapy Program" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color red="1.0" green="1.0" blue="1.0" />
+               </color>
+            </DropShadow>
+         </effect></Button>
       <VBox alignment="BOTTOM_LEFT" prefHeight="86.0" prefWidth="156.0">
          <children>
             <HBox alignment="CENTER" prefHeight="36.0" prefWidth="156.0">
@@ -45,7 +89,7 @@
    </VBox>
 
    <!-- Top Bar -->
-   <HBox alignment="CENTER_RIGHT" prefHeight="66.0" prefWidth="1150.0" style="-fx-background-color: #34495E; -fx-padding: 10;" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0">
+   <HBox alignment="CENTER_RIGHT" prefHeight="66.0" prefWidth="1150.0" style="-fx-background-color: #5D9CEC; -fx-padding: 10;" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0">
       <VBox alignment="CENTER">
          <Label fx:id="lblWelcome" style="-fx-text-fill: white; -fx-font-size: 16px;" text="Welcome, Admin" />
          <HBox alignment="CENTER">
